<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_letter"
            android:text="@string/letter"
            />
        <TextView
            android:id="@+id/tv_singer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            />
        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
          />

    </LinearLayout>
</layout>