<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/shadow_random_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/tv_numerical_order"
            >

            <TextView
                android:background="#1A000000"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Random"
                android:gravity="center_vertical"
                app:drawableLeftCompat="@drawable/shuffle_black" />
        </androidx.cardview.widget.CardView>

        <ImageView

            android:id="@+id/im_add_playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_playlst"
            app:layout_constraintTop_toTopOf="@id/shadow_random_music"
            app:layout_constraintBottom_toBottomOf="@id/shadow_random_music"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:layout_marginVertical="10dp"
            android:id="@+id/tv_numerical_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="1"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shadow_random_music" />

        <TextView
            android:id="@+id/tv_name_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_music"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/tv_numerical_order"
            app:layout_constraintLeft_toRightOf="@id/tv_numerical_order"
            app:layout_constraintRight_toLeftOf="@id/im_three_dots"
            app:layout_constraintBottom_toTopOf="@id/tv_name_singer"

            />

        <TextView
            android:id="@+id/tv_name_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mono"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_song"
            app:layout_constraintBottom_toBottomOf="@id/tv_numerical_order"
            app:layout_constraintLeft_toRightOf="@id/im_phone"
            />

        <ImageView
            android:id="@+id/im_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"
            app:layout_constraintTop_toTopOf="@+id/tv_name_singer"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_singer"
            app:layout_constraintLeft_toRightOf="@id/tv_numerical_order"
            app:layout_constraintRight_toLeftOf="@id/tv_name_singer"
            android:layout_marginEnd="5dp"
            />
        <View
            android:layout_marginVertical="3dp"
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintLeft_toRightOf="@id/tv_name_singer"
            app:layout_constraintTop_toTopOf="@id/tv_name_singer"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_singer"
            android:background="@color/black"
            />
        <TextView
            android:id="@+id/tv_name_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toTopOf="@id/tv_name_singer"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_singer"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintRight_toLeftOf="@id/im_three_dots"
            />
        <ImageView
            android:id="@+id/im_three_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/three_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>